cluster/apps/nextcloud/nextcloud/networkpolicies/nextcloud.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  description: "Policy for nextcloud"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: fpm-nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "10080" # Nextcloud Healthcheck
              protocol: TCP
            - port: "10443" # OIDC
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "10443" # OIDC
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: nextcloud-postgres
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": nextcloud
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000" # /healthz endpoint
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
            app.kubernetes.io/instance: nextcloud-valkey
            "k8s:io.kubernetes.pod.namespace": nextcloud
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: cloud.${BASE_DOMAIN} # Nextcloud Healthcheck
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
